# ipoptEigWrap

./: CMakeLists.txt  README.md
include/: TNLP_EigenDense.hpp  TNLP_EigenDenseExample.hpp
src/: TNLP_EigenDense.cpp  TNLP_EigenDenseExample.cpp  test_TNLP_EigenDense.cpp
